==============
lxml changelog
==============

2.3 (under development)
=======================

Features added
--------------

* New parameter ``output_parent`` to ``XSLTExtension.apply_templates()``
  to append the resulting content directly to an output element.

* ``XSLTExtension.process_children()`` to process the content of the
  XSLT extension element itself.

* ISO-Schematron support based on the de-facto Schematron reference
  'skeleton implementation'.

* XSLT objects now take XPath object as ``__call__`` stylesheet
  parameters.

* Enable path caching in ElementPath (``el.find*()``) to avoid parsing
  overhead.

* Setting the value of a namespaced attribute always uses a prefixed
  namespace instead of the default namespace even if both declare the
  same namespace URI.  This avoids serialisation problems when an
  attribute from a default namespace is set on an element from a
  different namespace.

* XSLT extension elements: support for XSLT context nodes other than
  elements: document root, comments, processing instructions.

* Support for strings (in addition to Elements) in node-sets returned
  by extension functions.

* Forms that lack an ``action`` attribute default to the base URL of
  the document on submit.

* XPath attribute result strings have an ``attrname`` property.

* Namespace URIs get validated against RFC 3986 at the API level
  (required by the XML namespace specification).

* Target parsers show their target object in the ``.target`` property
  (compatible with ElementTree).

Bugs fixed
----------

* Using XSLT extension elements around the root of the output document
  crashed.

* Support recent versions of html5lib by not requiring its
  ``XHTMLParser`` in ``htmlparser.py`` anymore.

* Invalid XML text characters were not rejected by the API when they
  appeared in unicode strings directly after non-ASCII characters.

* ``lxml.cssselect`` did not distinguish between ``x[attr="val"]`` and